<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scCustomUI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_ui_content"
        android:checked="true"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scShowTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/custom_timer" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_merchant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_merchant_name"
            android:text=""/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_amount"
            android:inputType="numberDecimal"
            android:text="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_otp_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_otp_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_resend_otp_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_resend_otp_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_resend_max_otp_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_resend_max_otp_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_resend_btn_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_resend_btn_title" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_submit_btn_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_submit_btn_title" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>