<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_bs_bgColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bs_bg_color_hint" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_bs_cornerRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bs_corner_radius_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_bs_font_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bs_font_color_hint"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_bs_resend_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bs_resend_font_color_hint"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_bs_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bs_font_size_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_bs_label_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bs_label_font_size_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_bs_header_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bs_heading_font_size_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>