<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_btn_bgColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_bg_hint" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_btn_cornerRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_radius_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_btn_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_textColor_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_btn_resend_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_resend_textColor_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_btn_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_font_Size"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>