<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_bgColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/toolbar_bgColor_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_buttonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/toolbar_btnText_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_headingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/toolbar_headingText_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_toolbarTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/toolbar_textColor_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_toolbarFontSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/toolbar_fontSize_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_toolbar_font_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/payu_dimen_10dp"
            android:text="Toolbar Font Name" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/acs_toolbar_font_name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_toolbar_font_name" />
    </RelativeLayout>

</LinearLayout>