<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_labelTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_textColor_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_labelHeadingTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_headingTextColor_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_labelFontSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_fontSize_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_headingFontSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_heading_fontSize_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_text_font_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/payu_dimen_10dp"
            android:text="Text Font Name" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/acs_label_font_name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/payu_dimen_10dp"
            android:layout_toRightOf="@+id/tv_text_font_name" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_heading_font_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/payu_dimen_10dp"
            android:text="Label Font Name" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/acs_label_heading_name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/payu_dimen_10dp"
            android:layout_toRightOf="@+id/tv_heading_font_name" />
    </RelativeLayout>


</LinearLayout>